Add HTML anchor for each cmdline option

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -138,12 +138,12 @@
 						<th>Description</th>
 						<th>Usage</th>
 					</tr>
-					<tr>
+					<tr id="rename">
 						<td><kbd class="option">-rename</kbd></td>
 						<td>rename media files</td>
 						<td>media folder or media file</td>
 					</tr>
-					<tr>
+					<tr id="db">
 						<td><kbd class="option">--db</kbd></td>
 						<td>database</td>
 						<td>
@@ -169,47 +169,47 @@
 							</table>
 						</td>
 					</tr>
-					<tr>
+					<tr id="order">
 						<td><kbd class="option">--order</kbd></td>
 						<td>episode numbering</td>
 						<td>Airdate | Absolute | DVD | Date and Title</td>
 					</tr>
-					<tr>
+					<tr id="format">
 						<td><kbd class="option">--format</kbd></td>
 						<td><a href="naming.html">naming scheme</a></td>
 						<td><a href="forums/viewtopic.php?t=3244">format expression</a></td>
 					</tr>
-					<tr>
+					<tr id="action">
 						<td><kbd class="option">--action</kbd></td>
 						<td><a href="forums/viewtopic.php?t=4915">rename action</a></td>
 						<td><a href="forums/viewtopic.php?t=4915">move | copy | symlink | hardlink | test</a></td>
 					</tr>
-					<tr>
+					<tr id="conflict">
 						<td><kbd class="option">--conflict</kbd></td>
 						<td><a href="forums/viewtopic.php?t=12891">conflict resolution</a></td>
 						<td><a href="forums/viewtopic.php?t=12891">skip | replace | auto | index | fail</a></td>
 					</tr>
-					<tr>
+					<tr id="filter">
 						<td><kbd class="option">--filter</kbd></td>
 						<td><a href="forums/viewtopic.php?t=2127">match filter</a></td>
 						<td><a href="forums/viewtopic.php?t=3244">filter expression</a></td>
 					</tr>
-					<tr>
+					<tr id="mapper">
 						<td><kbd class="option">--mapper</kbd></td>
 						<td><a href="forums/viewtopic.php?t=10996">episode mapper</a></td>
 						<td><a href="forums/viewtopic.php?t=3244">mapper expression</a></td>
 					</tr>
-					<tr>
+					<tr id="q">
 						<td><kbd class="option">--q</kbd></td>
 						<td><a href="forums/viewtopic.php?t=12043">manual lookup</a></td>
 						<td><a href="forums/viewtopic.php?t=12043">query expression</a></td>
 					</tr>
-					<tr>
+					<tr id="lang">
 						<td><kbd class="option">--lang</kbd></td>
 						<td>language code</td>
 						<td>English | French | German | Chinese | etc</td>
 					</tr>
-					<tr>
+					<tr id="non-strict">
 						<td><kbd class="option">-non-strict</kbd></td>
 						<td><a href="forums/viewtopic.php?t=4695">opportunistic match mode</a></td>
 						<td>
@@ -223,22 +223,22 @@
 							</table>
 						</td>
 					</tr>
-					<tr>
+					<tr id="r">
 						<td><kbd class="option">-r</kbd></td>
 						<td>select files recursively</td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="d">
 						<td><kbd class="option">-d</kbd></td>
 						<td><a href="forums/viewtopic.php?t=12263">rename folders</a></td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="file-filter">
 						<td><kbd class="option">--file-filter</kbd></td>
 						<td><a href="forums/viewtopic.php?t=4222">input file filter</a></td>
 						<td><a href="forums/viewtopic.php?t=13126">file filter expression</a></td>
 					</tr>
-					<tr>
+					<tr id="output">
 						<td><kbd class="option">--output</kbd></td>
 						<td>output path</td>
 						<td>
@@ -255,37 +255,37 @@
 							</table>
 						</td>
 					</tr>
-					<tr>
+					<tr id="apply">
 						<td><kbd class="option">--apply</kbd></td>
 						<td><a href="forums/viewtopic.php?t=11079">apply post-processing</a></td>
 						<td><a href="forums/viewtopic.php?t=11079">artwork | nfo | date | import | prune</a></td>
 					</tr>
-					<tr>
+					<tr id="exec">
 						<td><kbd class="option">-exec</kbd></td>
 						<td><a href="forums/viewtopic.php?t=11078">execute command</a></td>
 						<td><a href="forums/viewtopic.php?t=11078">exec expression</a></td>
 					</tr>
-					<tr>
+					<tr id="extract">
 						<td><kbd class="option">-extract</kbd></td>
 						<td>extract archives</td>
 						<td>folder or archive file</td>
 					</tr>
-					<tr>
+					<tr id="check">
 						<td><kbd class="option">-check</kbd></td>
 						<td>compute or verify hashes</td>
 						<td>folder or verification file</td>
 					</tr>
-					<tr>
+					<tr id="get-subtitles">
 						<td><kbd class="option">-get-subtitles</kbd></td>
 						<td>fetch missing subtitles</td>
 						<td>media folder or video file</td>
 					</tr>
-					<tr>
+					<tr id="encoding">
 						<td><kbd class="option">--encoding</kbd></td>
 						<td>output charset</td>
 						<td>UTF-8 | Windows-1252 | GB18030 | etc</td>
 					</tr>
-					<tr>
+					<tr id="list">
 						<td><kbd class="option">-list</kbd></td>
 						<td>print episode list</td>
 						<td>
@@ -299,7 +299,7 @@
 							</table>
 						</td>
 					</tr>
-					<tr>
+					<tr id="find">
 						<td><kbd class="option">-find</kbd></td>
 						<td>print file paths</td>
 						<td>
@@ -313,73 +313,73 @@
 							</table>
 						</td>
 					</tr>
-					<tr>
+					<tr id="mediainfo">
 						<td><kbd class="option">-mediainfo</kbd></td>
 						<td>print media info</td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="script">
 						<td><kbd class="option">-script</kbd></td>
 						<td><a href="script.html">run script</a></td>
 						<td></td>
 					</tr>
 
-					<tr>
+					<tr id="revert">
 						<td><kbd class="option">-revert</kbd></td>
 						<td><a href="forums/viewtopic.php?t=12133">undo rename operations</a></td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="mode">
 						<td><kbd class="option">--mode</kbd></td>
 						<td><a href="forums/viewtopic.php?t=4398">interactive</a></td>
 						<td><a href="forums/viewtopic.php?t=4398">enable console-interactive mode</a></td>
 					</tr>
-					<tr>
+					<tr id="log">
 						<td><kbd class="option">--log</kbd></td>
 						<td><a href="forums/viewtopic.php?t=3913">log level</a></td>
 						<td>all | fine | info | warning</td>
 					</tr>
-					<tr>
+					<tr id="clear-cache">
 						<td><kbd class="option">-clear-cache</kbd></td>
 						<td><a href="forums/viewtopic.php?t=1996">clear cache</a></td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="clear-prefs">
 						<td><kbd class="option">-clear-prefs</kbd></td>
 						<td><a href="forums/viewtopic.php?t=4205">reset application settings</a></td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="clear-history">
 						<td><kbd class="option">-clear-history</kbd></td>
 						<td><a href="forums/viewtopic.php?t=12133">reset history</a></td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="unixfs">
 						<td><kbd class="option">-unixfs</kbd></td>
 						<td><a href="forums/viewtopic.php?t=12627">disable file path validation</a></td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="no-xattr">
 						<td><kbd class="option">-no-xattr</kbd></td>
 						<td><a href="forums/viewtopic.php?t=324">disable extended attributes</a></td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="no-probe">
 						<td><kbd class="option">-no-probe</kbd></td>
 						<td><a href="forums/viewtopic.php?t=12022">disable media parser</a></td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="no-history">
 						<td><kbd class="option">-no-history</kbd></td>
 						<td><a href="forums/viewtopic.php?t=9787">disable history</a></td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="version">
 						<td><kbd class="option">-version</kbd></td>
 						<td>print version</td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr id="help">
 						<td><kbd class="option">-help</kbd></td>
 						<td>print usage</td>
 						<td></td>
