Add link to Conditional Structures (if-then-else) help page for examples

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -318,13 +318,13 @@
 					</tr>
 					<tr id="anime">
 						<td><kbd class="variable">anime</kbd></td>
-						<td>is anime episode</td>
+						<td><a href="forums/viewtopic.php?t=4191">is anime episode</a></td>
 						<td>false</td>
 						<td><kbd class="type">true | false</kbd></td>
 					</tr>
 					<tr id="regular">
 						<td><kbd class="variable">regular</kbd></td>
-						<td>is regular episode</td>
+						<td><a href="forums/viewtopic.php?t=4191">is regular episode</a></td>
 						<td>true</td>
 						<td><kbd class="type">true | false</kbd></td>
 					</tr>
