[SNIPPET] Replace Characters, Words or Patterns

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -887,6 +887,11 @@
 					<small class="comment">(e.g. &quot;Wham!&quot; ➔ &quot;Wham&quot;)</small>
 				</p>
 				<p>
+					<code><kbd class="type">String</kbd>.<kbd class="method">replace</kbd>(<kbd class="regex">pattern</kbd>:<kbd class="string">replacement</kbd>)</code>
+					<a href="forums/viewtopic.php?t=13680">Replace all occurrences</a> of the given patterns.
+					<small class="comment">(e.g. &quot;apple&quot; ➔ &quot;orange&quot;)</small>
+				</p>
+				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">space</kbd>(<kbd class="string">replacement</kbd>)</code>
 					Replace all spaces.
 					<small class="comment">(e.g. &quot;Doctor Who&quot; ➔ &quot;Doctor_Who&quot;)</small>
