Add #id for each extension method for linking

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -868,139 +868,139 @@
 					Function Reference
 					<a href="docs/api/net/filebot/format/ExpressionFormatMethods.html" class="source">source</a>
 				</h2>
-				<p>
+				<p id="String.pad">
 					<code><kbd class="type">String</kbd>.<kbd class="method">pad</kbd>(<kbd class="numeral">length</kbd>, <kbd class="string">padding</kbd> = <kbd class="string">"0"</kbd>)</code>
 					Pad to length using the given character.
 					<small class="comment">(e.g. &quot;1&quot; ➔ &quot;01&quot;)</small>
 				</p>
-				<p>
+				<p id="String.match">
 					<code><kbd class="type">String</kbd>.<kbd class="method">match</kbd>(<kbd class="regex">pattern</kbd>)</code>
 					Find and <a href="forums/viewtopic.php?t=12643">match a pattern</a>, or unwind if the given pattern cannot be found.
 				</p>
-				<p>
+				<p id="String.matchAll">
 					<code><kbd class="type">String</kbd>.<kbd class="method">matchAll</kbd>(<kbd class="regex">pattern</kbd>)</code>
 					Find and match all occurrences of a pattern, or unwind if the given pattern cannot be found.
 				</p>
-				<p>
+				<p id="String.removeAll">
 					<code><kbd class="type">String</kbd>.<kbd class="method">removeAll</kbd>(<kbd class="regex">pattern</kbd>)</code>
 					Remove all occurrences of the given pattern.
 					<small class="comment">(e.g. &quot;Wham!&quot; ➔ &quot;Wham&quot;)</small>
 				</p>
-				<p>
+				<p id="String.replace">
 					<code><kbd class="type">String</kbd>.<kbd class="method">replace</kbd>(<kbd class="regex">pattern</kbd>:<kbd class="string">replacement</kbd>)</code>
 					<a href="forums/viewtopic.php?t=13680">Replace all occurrences</a> of the given patterns.
 					<small class="comment">(e.g. &quot;apple&quot; ➔ &quot;orange&quot;)</small>
 				</p>
-				<p>
+				<p id="String.space">
 					<code><kbd class="type">String</kbd>.<kbd class="method">space</kbd>(<kbd class="string">replacement</kbd>)</code>
 					Replace all spaces.
 					<small class="comment">(e.g. &quot;Doctor Who&quot; ➔ &quot;Doctor_Who&quot;)</small>
 				</p>
-				<p>
+				<p id="String.colon">
 					<code><kbd class="type">String</kbd>.<kbd class="method">colon</kbd>(<kbd class="string">replacement</kbd>)</code>
 					Find and <a href="forums/viewtopic.php?t=13019">replace colons</a>.
 					<small class="comment">(e.g. &quot;Sissi: The Young Empress&quot; ➔ &quot;Sissi - The Young Empress&quot;)</small>
 				</p>
-				<p>
+				<p id="String.slash">
 					<code><kbd class="type">String</kbd>.<kbd class="method">slash</kbd>(<kbd class="string">replacement</kbd>)</code>Replace all slashes.
 					<small class="comment">(e.g. &quot;V_MPEG4/ISO/AVC&quot; ➔ &quot;V_MPEG4.ISO.AVC&quot;)</small>
 				</p>
-				<p>
+				<p id="String.validateFileName">
 					<code><kbd class="type">String</kbd>.<kbd class="method">validateFileName</kbd>()</code>
 					Strip special characters.
 					<small class="comment">(e.g. &quot;.hack&quot; ➔ &quot;hack&quot;)</small>
 				</p>
-				<p>
+				<p id="String.lower">
 					<code><kbd class="type">String</kbd>.<kbd class="method">lower</kbd>()</code>
 					Convert all characters to lower case.
 					<small class="comment">(e.g. &quot;Firelfy&quot; ➔ &quot;firefly&quot;)</small>
 				</p>
-				<p>
+				<p id="String.upper">
 					<code><kbd class="type">String</kbd>.<kbd class="method">upper</kbd>()</code>
 					Convert all characters to upper case.
 					<small class="comment">(e.g. &quot;Firelfy&quot; ➔ &quot;FIREFLY&quot;)</small>
 				</p>
-				<p>
+				<p id="String.upperInitial">
 					<code><kbd class="type">String</kbd>.<kbd class="method">upperInitial</kbd>()</code>
 					Convert all initial characters to upper case.
 					<small class="comment">(e.g. &quot;The Day a new Demon was born&quot; ➔ &quot;The Day A New Demon Was Born&quot;)</small>
 				</p>
-				<p>
+				<p id="String.lowerTrail">
 					<code><kbd class="type">String</kbd>.<kbd class="method">lowerTrail</kbd>()</code>
 					Convert all trailing characters to lower case.
 					<small class="comment">(e.g. &quot;Gundam SEED&quot; ➔ &quot;Gundam Seed&quot;)</small>
 				</p>
-				<p>
+				<p id="String.sortName">
 					<code><kbd class="type">String</kbd>.<kbd class="method">sortName</kbd>()</code>
 					Convert to <a href="forums/viewtopic.php?t=211">sort name</a>.
 					<small class="comment">(e.g. &quot;The Walking Dead&quot; ➔ &quot;Walking Dead&quot;)</small>
 				</p>
-				<p>
+				<p id="String.initialName">
 					<code><kbd class="type">String</kbd>.<kbd class="method">initialName</kbd>()</code>
 					Reduce first name to initials.
 					<small class="comment">(e.g. &quot;James Cameron&quot; ➔ &quot;J. Cameron&quot;)</small>
 				</p>
-				<p>
+				<p id="String.before">
 					<code><kbd class="type">String</kbd>.<kbd class="method">before</kbd>(<kbd class="regex">pattern</kbd>)</code>
 					Match substring before the given pattern or return the original value.
 				</p>
-				<p>
+				<p id="String.after">
 					<code><kbd class="type">String</kbd>.<kbd class="method">after</kbd>(<kbd class="regex">pattern</kbd>)</code>
 					Match substring before the given pattern or return the original value.
 				</p>
-				<p>
+				<p id="String.replaceAll">
 					<code><kbd class="type">String</kbd>.<kbd class="method">replaceAll</kbd>(<kbd class="regex">pattern</kbd>, <kbd class="string">replacement</kbd>)</code>
 					Replace all occurances of the given pattern.
 				</p>
-				<p>
+				<p id="String.replaceTrailingBrackets">
 					<code><kbd class="type">String</kbd>.<kbd class="method">replaceTrailingBrackets</kbd>(<kbd class="string">replacement</kbd> = <kbd class="string">""</kbd>)</code>
 					Replace trailing round brackets.
 					<small class="comment">(e.g. &quot;The IT Crowd (UK)&quot; ➔ &quot;The IT Crowd&quot;)</small>
 				</p>
-				<p>
+				<p id="replacePart">
 					<code><kbd class="type">String</kbd>.<kbd class="method">replacePart</kbd>(<kbd class="string">replacement</kbd> = <kbd class="string">""</kbd>)</code>
 					Replace trailing part number.
 					<small class="comment">(e.g. &quot;Today Is the Day (1)&quot; ➔ &quot;Today Is the Day, Part 1&quot;)</small>
 				</p>
-				<p>
+				<p id="String.matchBrackets">
 					<code><kbd class="type">String</kbd>.<kbd class="method">matchBrackets</kbd>()</code>
 					Match occurances of values enclosed in round brackets, square brackets or curly brackets.
 				</p>
-				<p>
+				<p id="String.acronym">
 					<code><kbd class="type">String</kbd>.<kbd class="method">acronym</kbd>()</code>
 					Convert to <a href="forums/viewtopic.php?t=182">acronym</a>.
 					<small class="comment">(e.g. &quot;Deep Space 9&quot; ➔ &quot;DS9&quot;)</small>
 				</p>
-				<p>
+				<p id="String.roman">
 					<code><kbd class="type">String</kbd>.<kbd class="method">roman</kbd>()</code>
 					Replace numbers 1..12 with Roman numerals.
 					<small class="comment">(e.g. &quot;Star Wars: Episode 4&quot; ➔ &quot;Star Wars: Episode IV&quot;)</small>
 				</p>
-				<p>
+				<p id="String.clean">
 					<code><kbd class="type">String</kbd>.<kbd class="method">clean</kbd>()</code>
 					Strip invalid characters and release information.
 					<small class="comment">(e.g. &quot;Sissi: The Young Empress&quot; ➔ &quot;Sissi The Young Empress&quot;)</small>
 				</p>
-				<p>
+				<p id="String.ascii">
 					<code><kbd class="type">String</kbd>.<kbd class="method">ascii</kbd>()</code>
 					Convert Unicode characters to ASCII.
 					<small class="comment">(e.g. &quot;カタカナ&quot; ➔ &quot;katakana&quot;)</small>
 				</p>
-				<p>
+				<p id="String.transliterate">
 					<code><kbd class="type">String</kbd>.<kbd class="method">transliterate</kbd>(<kbd class="string">identifier</kbd>)</code>Apply any <a href="https://unicode-org.github.io/icu/userguide/transforms/general/#transliterator-identifiers">ICU script transliteration</a>.
 					<small class="comment">(e.g. &quot;中国&quot; ➔ &quot;zhōng guó&quot;)</small>
 				</p>
-				<p>
+				<p id="Number.pad">
 					<code><kbd class="type">Number</kbd>.<kbd class="method">pad</kbd>(<kbd class="numeral">length</kbd>, <kbd class="string">padding</kbd> = <kbd class="string">"0"</kbd>)</code>
 					Pad to length using the given character.
 					<small class="comment">(e.g. &quot;1&quot; ➔ &quot;01&quot;)</small>
 				</p>
-				<p>
+				<p id="Number.round">
 					<code><kbd class="type">Number</kbd>.<kbd class="method">round</kbd>(<kbd class="numeral">precision</kbd>, <kbd class="string">padding</kbd> = <kbd class="string">"0"</kbd>)</code>
 					<a href="forums/viewtopic.php?t=194">Round decimal number</a> to precision.
 					<small class="comment">(e.g. 3.14 ➔ &quot;3&quot;)</small>
 				</p>
-				<p>
+				<p id="List.joining">
 					<code><kbd class="type">List</kbd>.<kbd class="method">joining</kbd>(<kbd class="string">delimiter</kbd>, <kbd class="string">prefix</kbd> = <kbd class="string">""</kbd>, <kbd class="string">suffix</kbd> = <kbd class="string">""</kbd>)</code>
 					<a href="forums/viewtopic.php?t=13571">Format a list of values</a>.
 					<small class="comment">(e.g. [2001, 2002] ➔ &quot;(2001-2002)&quot;)</small>
