unRAID containers are available via Community Apps

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -69,6 +69,7 @@
 					<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
 					<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
 					<li>Universal Linux package is available <a href="linux/snap.html">via Snapcraft</a></li>
+					<li>unRAID containers are available <a href="linux/unraid.html">via Community Apps</a></li>
 					<li>Docker images are available <a href="linux/docker.html">on Docker Hub</a></li>
 				</ul>
 			</div>
