--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -195,6 +195,7 @@
 					<li>QNAP NAS package is available <a href="linux/qnap.html">via App Center</a></li>
 					<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
 					<li>Universal Linux package is available <a href="linux/snap.html">via Snapcraft</a></li>
+					<li>unRAID containers are available <a href="linux/unraid.html">via Community Apps</a></li>
 					<li>Docker images are available <a href="linux/docker.html">on Docker Hub</a></li>
 					<li>All packages are available on our <a href="https://get.filebot.net/filebot/">Release Index</a></li>
 				</ul>
