Added {tvdbid} binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -241,13 +241,19 @@
 					<tr id="id">
 						<td><kbd class="variable">id</kbd></td>
 						<td>movie / series ID</td>
-						<td>78874</td>
+						<td>1437</td>
 						<td><kbd class="type">Integer</kbd></td>
 					</tr>
 					<tr id="tmdbid">
 						<td><kbd class="variable">tmdbid</kbd></td>
 						<td><a href="https://www.themoviedb.org/">TheMovieDB ID</a></td>
-						<td>19995</td>
+						<td>1437</td>
+						<td><kbd class="type">String</kbd></td>
+					</tr>
+					<tr id="tvdbid">
+						<td><kbd class="variable">tvdbid</kbd></td>
+						<td><a href="https://thetvdb.com/">TheTVDB ID</a></td>
+						<td>78874</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr id="imdbid">
