Added {medium} disk number binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -340,15 +340,21 @@
 						<td>Leona Lewis - I See You</td>
 						<td><kbd class="type">AudioTrack</kbd></td>
 					</tr>
+					<tr id="medium">
+						<td><kbd class="variable">medium</kbd></td>
+						<td>medium index</td>
+						<td>1</td>
+						<td><kbd class="type">Integer</kbd></td>
+					</tr>
 					<tr id="album">
 						<td><kbd class="variable">album</kbd></td>
-						<td>audio track album</td>
+						<td>album</td>
 						<td>Avatar</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr id="artist">
 						<td><kbd class="variable">artist</kbd></td>
-						<td>audio track artist</td>
+						<td>track artist</td>
 						<td>Leona Lewis</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
