Use @2x HIDPI icons

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -71,7 +71,7 @@
 			<div class="review light">
 				<a class="box" href="reviews.html" id="review" style="display: none">
 					<div class="thumbs up">
-						<img alt="Like" src="images/thumbs.png" />
+						<img alt="Like" src="images/thumbs.svg" width="26" height="26" />
 					</div>
 					<div>
 						<p class="head">Posted by <span class="user"></span> on <span class="date"></span></p>
@@ -81,7 +81,7 @@
 			</div>
 
 			<div class="section first tutorial">
-				<img class="icon light" src="images/starthere.png" alt="start" width="48" height="48" />
+				<img class="icon light" src="images/navigate.png" alt="start" width="48" height="48" />
 				<h2>Getting Started</h2>
 				<p>
 					<strong>FileBot makes renaming and organizing media files a breeze.</strong> FileBot will automatically match your files with information 
