--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -248,13 +248,13 @@
 						<td><kbd class="variable">tmdbid</kbd></td>
 						<td><a href="https://www.themoviedb.org/">TheMovieDB ID</a></td>
 						<td>1437</td>
-						<td><kbd class="type">String</kbd></td>
+						<td><kbd class="type">Integer</kbd></td>
 					</tr>
 					<tr id="tvdbid">
 						<td><kbd class="variable">tvdbid</kbd></td>
 						<td><a href="https://thetvdb.com/">TheTVDB ID</a></td>
 						<td>78874</td>
-						<td><kbd class="type">String</kbd></td>
+						<td><kbd class="type">Integer</kbd></td>
 					</tr>
 					<tr id="imdbid">
 						<td><kbd class="variable">imdbid</kbd></td>
