Make Back / Forward buttons work

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -56,7 +56,7 @@
 
 		<div class="content">
 			<div class="screenshot screencast light">
-				<a href="getting-started/index.html" title="Getting Started">
+				<a href="getting-started/index.html#rename" title="Getting Started">
 					<img class="play" alt="play" src="images/play.png" width="8" height="8" />
 					<img class="screenshot" alt="Getting Started" src="screenshots/rename.png" width="300" height="219" />
 				</a>
