Organize files into a standard file and folder structure for Plex and friends

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -86,7 +86,7 @@
 				<p>
 					<strong>FileBot makes renaming and organizing media files a breeze.</strong> FileBot will automatically match your files with information 
 					from your preferred online database, and then rename and organize everything perfectly for you. You can customize your <a href="naming.html">naming scheme</a>
-					to your specific needs and preferences, or keep things simple and stick to the <a href="forums/viewtopic.php?t=4116">{plex}</a> naming standard.
+					to your specific needs and preferences, or keep things simple and stick to the <a href="manual/plex.html">{plex}</a> naming standard.
 				</p>
 				<ol>
 					<li>Drag movie or episode files into the <span class="label">Original Files</span> list area</li>
@@ -120,7 +120,7 @@
 				<ul class="list">
 					<li>A simple user-interface</li>
 					<li>Native installers and packages for all operating systems</li>
-					<li>A powerful <a href="cli.html">command-line interface</a> for any kind of <a href="forums/viewtopic.php?t=5">automation</a></li>
+					<li>A powerful <a href="cli.html">command-line interface</a> for any kind of <a href="script.html">automation</a></li>
 				</ul>
 				<ul class="list next" id="rename">
 					<li>
@@ -134,16 +134,17 @@
 						</div>
 						Rename and move hundreds of files in a matter of seconds
 					</li>
+					<li>Organize files into a <a href="manual/plex.html">standard file and folder structure</a> for <a href="https://www.plex.tv/">Plex</a> and friends</li>
 					<li>Fetch episode / movie information from <a href="https://www.themoviedb.org/">TheMovieDB</a>, <a href="https://thetvdb.com/">TheTVDB</a> or <a href="https://anidb.net/">AniDB</a></li>
 					<li>Match files with online episode / movie information auto-magically</li>
 					<li>Powerful and highly customizable <a href="naming.html">naming scheme</a><br/><span class="note light mediainfo">MediaInfo optional</span></li>
 					<li>Language preferences for episode / movie information</li>
-					<li>Revert rename operations using the internal history</li>
+					<li>Revert rename operations using the <a href="help/history.html">internal history</a></li>
 				</ul>
 				<ul class="list next" id="generic">
 					<li>Rename music using <a href="https://en.wikipedia.org/wiki/ID3">ID3</a> tags or <a href="https://acoustid.org/">AcoustID</a> acoustic fingerprints</li>
 					<li>Rename photos using <a href="https://en.wikipedia.org/wiki/Exif">Exif</a> metadata</li>
-					<li>Rename generic files using <a href="forums/viewtopic.php?t=2072">custom pattern matching</a></li>
+					<li>Rename generic files using <a href="help/generic-files.html">custom pattern matching</a></li>
 				</ul>
 				<ul class="list next" id="subtitles">
 					<li>
