--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -134,7 +134,7 @@
 						</div>
 						Rename and move hundreds of files in a matter of seconds
 					</li>
-					<li>Organize files into a <a href="manual/plex.html">standard file and folder structure</a> for <a href="https://www.plex.tv/">Plex</a> and friends</li>
+					<li>Organize files into a <a href="manual/plex.html">standard file structure</a> for <a href="forums/viewtopic.php?t=4116">Plex</a>, <a href="forums/viewtopic.php?t=4116">Kodi</a>, <a href="forums/viewtopic.php?t=4116">Jellyfin</a> and friends</li>
 					<li>Fetch episode / movie information from <a href="https://www.themoviedb.org/">TheMovieDB</a>, <a href="https://thetvdb.com/">TheTVDB</a> or <a href="https://anidb.net/">AniDB</a></li>
 					<li>Match files with online episode / movie information auto-magically</li>
 					<li>Powerful and highly customizable <a href="naming.html">naming scheme</a><br/><span class="note light mediainfo">MediaInfo optional</span></li>
