Added {jellyfin} binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -304,6 +304,12 @@
 						<td>&lt;relative path&gt;</td>
 						<td><kbd class="type">File</kbd></td>
 					</tr>
+					<tr id="jellyfin">
+						<td><kbd class="variable">jellyfin</kbd></td>
+						<td><a href="forums/viewtopic.php?t=4116">Jellyfin Naming Standard</a></td>
+						<td>&lt;relative path&gt;</td>
+						<td><kbd class="type">File</kbd></td>
+					</tr>
 					<tr id="az">
 						<td><kbd class="variable">az</kbd></td>
 						<td><a href="forums/viewtopic.php?t=910">sort collection letter</a></td>
