Add --file-order option

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -238,6 +238,11 @@
 						<td><a href="forums/viewtopic.php?t=4222">input file filter</a></td>
 						<td><a href="forums/viewtopic.php?t=13126">file filter expression</a></td>
 					</tr>
+					<tr id="file-order">
+						<td><kbd class="option">--file-order</kbd></td>
+						<td><a href="forums/viewtopic.php?t=13796">input file order</a></td>
+						<td><a href="forums/viewtopic.php?t=13796">file order expression</a></td>
+					</tr>
 					<tr id="output">
 						<td><kbd class="option">--output</kbd></td>
 						<td>output path</td>
