--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -7,6 +7,9 @@
 	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 	<link rel="stylesheet" href="base.css" type="text/css">
 	<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
+
+	<link rel="preload" href="nav-a-bg.svg" as="image">
+	<link rel="preload" href="nav-a-bg-h.svg" as="image">
 </head>
 <body>
 	<div class="page">
