--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -8,6 +8,9 @@
 	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 	<link rel="stylesheet" href="base.css" type="text/css">
 	<link rel="stylesheet" href="thanks.css" type="text/css">
+
+	<link rel="preload" href="nav-a-bg.svg" as="image">
+	<link rel="preload" href="nav-a-bg-h.svg" as="image">
 </head>
 <body>
 	<div class="page">
