Preload code font

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 	<link rel="stylesheet" href="code.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 
+	<link rel="preload" href="fonts/code.ttf" as="font" type="font/ttf" crossorigin>
+
 	<link rel="preload" href="nav-a-bg.svg" as="image">
 	<link rel="preload" href="nav-a-bg-h.svg" as="image">
 </head>
