--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -9,6 +9,11 @@
 	<link rel="stylesheet" href="code.css" type="text/css">
 	<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 	<link rel="stylesheet" href="code.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
+
+	<link rel="preload" href="fonts/code.ttf" as="font" type="font/ttf" crossorigin>
+
+	<link rel="preload" href="nav-a-bg.svg" as="image">
+	<link rel="preload" href="nav-a-bg-h.svg" as="image">
 </head>
 <body>
 	<div class="page">
