--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -873,6 +873,12 @@
 						<td>&lt;list of bindings&gt;</td>
 						<td><kbd class="type">[String:Any]*</kbd></td>
 					</tr>
+					<tr id="episodelist">
+						<td><kbd class="variable">episodelist</kbd></td>
+						<td><a href="forums/viewtopic.php?t=9814">series context</a></td>
+						<td>&lt;list of bindings&gt;</td>
+						<td><kbd class="type">[String:Any]*</kbd></td>
+					</tr>
 					<tr id="AnimeList">
 						<td><kbd class="variable">AnimeList</kbd></td>
 						<td><a href="forums/viewtopic.php?t=10996">Anime Lists mapper</a></td>
