--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -228,7 +228,7 @@
 				</ul>
 			</div>
 
-			<div class="section contact">
+			<div class="section contact" id="contact">
 				<img class="icon light" src="images/contact.png" alt="contact" width="48" height="48" />
 				<span class="quote">Will you join us?</span>
 				<h2>Contact</h2>
