Add image binding docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -819,6 +819,12 @@
 						<td>&lt;subtitle streams&gt;</td>
 						<td><kbd class="type">[String:String]*</kbd></td>
 					</tr>
+					<tr id="image">
+						<td><kbd class="variable">text</kbd></td>
+						<td>image properties</td>
+						<td>&lt;image properties&gt;</td>
+						<td><kbd class="type">[String:String]</kbd></td>
+					</tr>
 					<tr id="camera">
 						<td><kbd class="variable">camera</kbd></td>
 						<td>photo camera</td>
