Add exif binding docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -820,8 +820,14 @@
 						<td><kbd class="type">[String:String]*</kbd></td>
 					</tr>
 					<tr id="image">
-						<td><kbd class="variable">text</kbd></td>
-						<td>image properties</td>
+						<td><kbd class="variable">image</kbd></td>
+						<td><a href="forums/viewtopic.php?t=4285">image properties</a></td>
+						<td>&lt;image properties&gt;</td>
+						<td><kbd class="type">[String:String]</kbd></td>
+					</tr>
+					<tr id="exif">
+						<td><kbd class="variable">exif</kbd></td>
+						<td>EXIF image metadata</td>
 						<td>&lt;image properties&gt;</td>
 						<td><kbd class="type">[String:String]</kbd></td>
 					</tr>
