--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -3,6 +3,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<base href="@{link.site.index}" target="_blank">
+	<meta name="robots" content="noindex">
 
 	<title>Thank you for purchasing FileBot! 💯</title>
 	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
