<meta name="viewport" content="width=device-width">

--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<base href="@{link.site.index}" target="_blank">
+	<meta name="viewport" content="width=device-width">
 	<meta name="robots" content="noindex">
 
 	<title>Thank you for purchasing FileBot! 💯</title>
@@ -12,6 +12,8 @@
 
 	<link rel="preload" href="nav-a-bg.svg" as="image">
 	<link rel="preload" href="nav-a-bg-h.svg" as="image">
+
+	<base href="@{link.site.index}" target="_blank">
 </head>
 <body>
 	<div class="page">
