--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width">
 
 	<title>Download FileBot</title>
 	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
