--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -183,7 +183,7 @@
 					<tr id="format">
 						<td><kbd class="option">--format</kbd></td>
 						<td><a href="naming.html">naming scheme</a></td>
-						<td><a href="forums/viewtopic.php?t=3244">format expression</a></td>
+						<td><a href="naming.html">format expression</a></td>
 					</tr>
 					<tr id="action">
 						<td><kbd class="option">--action</kbd></td>
@@ -198,12 +198,12 @@
 					<tr id="filter">
 						<td><kbd class="option">--filter</kbd></td>
 						<td><a href="forums/viewtopic.php?t=2127">match filter</a></td>
-						<td><a href="forums/viewtopic.php?t=3244">filter expression</a></td>
+						<td><a href="forums/viewtopic.php?t=2127">filter expression</a></td>
 					</tr>
 					<tr id="mapper">
 						<td><kbd class="option">--mapper</kbd></td>
 						<td><a href="forums/viewtopic.php?t=10996">episode mapper</a></td>
-						<td><a href="forums/viewtopic.php?t=3244">mapper expression</a></td>
+						<td><a href="forums/viewtopic.php?t=10996">mapper expression</a></td>
 					</tr>
 					<tr id="q">
 						<td><kbd class="option">--q</kbd></td>
