Always link to main docs page

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -241,8 +241,8 @@
 					</tr>
 					<tr id="file-filter">
 						<td><kbd class="option">--file-filter</kbd></td>
-						<td><a href="forums/viewtopic.php?t=4222">input file filter</a></td>
-						<td><a href="forums/viewtopic.php?t=13126">file filter expression</a></td>
+						<td><a href="forums/viewtopic.php?t=4222#file-filter">input file filter</a></td>
+						<td><a href="forums/viewtopic.php?t=4222#file-filter">file filter expression</a></td>
 					</tr>
 					<tr id="file-order">
 						<td><kbd class="option">--file-order</kbd></td>
