--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -294,25 +294,25 @@
 					</tr>
 					<tr id="plex">
 						<td><kbd class="variable">plex</kbd></td>
-						<td><a href="forums/viewtopic.php?t=4116">Plex Naming Standard</a></td>
+						<td><a href="forums/viewtopic.php?t=4116#plex">Plex Naming Standard</a></td>
 						<td>&lt;relative path&gt;</td>
 						<td><kbd class="type">File</kbd></td>
 					</tr>
 					<tr id="kodi">
 						<td><kbd class="variable">kodi</kbd></td>
-						<td><a href="forums/viewtopic.php?t=4116">Kodi Naming Standard</a></td>
+						<td><a href="forums/viewtopic.php?t=4116#kodi">Kodi Naming Standard</a></td>
 						<td>&lt;relative path&gt;</td>
 						<td><kbd class="type">File</kbd></td>
 					</tr>
 					<tr id="emby">
 						<td><kbd class="variable">emby</kbd></td>
-						<td><a href="forums/viewtopic.php?t=4116">Emby Naming Standard</a></td>
+						<td><a href="forums/viewtopic.php?t=4116#emby">Emby Naming Standard</a></td>
 						<td>&lt;relative path&gt;</td>
 						<td><kbd class="type">File</kbd></td>
 					</tr>
 					<tr id="jellyfin">
 						<td><kbd class="variable">jellyfin</kbd></td>
-						<td><a href="forums/viewtopic.php?t=4116">Jellyfin Naming Standard</a></td>
+						<td><a href="forums/viewtopic.php?t=4116#jellyfin">Jellyfin Naming Standard</a></td>
 						<td>&lt;relative path&gt;</td>
 						<td><kbd class="type">File</kbd></td>
 					</tr>
