POSIX installer scripts are available via cURL

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -67,8 +67,8 @@
 				<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
 				<h2>FileBot for all POSIX platforms</h2>
 				<ul class="list">
-					<li>POSIX portable package: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">(requires JDK 17)</small></li>
-					<li>POSIX legacy package: <a href="@{link.release.prefix}-portable-jdk8.tar.xz">@{release}-portable-jdk8.tar.xz</a> <small class="comment">(headless; requires JDK 8)</small></li>
+					<li>POSIX portable package: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a></li>
+					<li>POSIX installer scripts are available <a href="linux/tar.html">via cURL</a></li>
 					<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_amd64.rpm">@{release}_amd64.rpm</a></li>
 					<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
 					<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
