--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -194,6 +194,7 @@
 					<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_amd64.rpm">@{release}_amd64.rpm</a></li>
 					<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and ZYPPER</a></li>
 					<li>POSIX portable tarball: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for other Linux and FreeBSD devices</small></li>
+					<li>POSIX installer scripts are available <a href="linux/tar.html">via cURL</a></li>
 					<li>Windows packages are available <a href="windows/winget.html">via winget</a> and <a href="windows/scoop.html">via scoop</a></li>
 					<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
 					<li>Synology NAS package is available <a href="linux/syno.html">via Package Center</a></li>
