Added {language} original language binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -418,6 +418,12 @@
 						<td>[Science Fiction, ...]</td>
 						<td><kbd class="type">String*</kbd></td>
 					</tr>
+					<tr id="language">
+						<td><kbd class="variable">language</kbd></td>
+						<td>original language</td>
+						<td>eng</td>
+						<td><kbd class="type">Language</kbd></td>
+					</tr>
 					<tr id="languages">
 						<td><kbd class="variable">languages</kbd></td>
 						<td>spoken languages</td>
