Added {mediaFileName} binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -642,7 +642,7 @@
 					</tr>
 					<tr id="original">
 						<td><kbd class="variable">original</kbd></td>
-						<td><a href="forums/viewtopic.php?t=324">original filename</a></td>
+						<td><a href="forums/viewtopic.php?t=324">original file name</a></td>
 						<td>Serenity</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
@@ -684,7 +684,7 @@
 					</tr>
 					<tr id="fn">
 						<td><kbd class="variable">fn</kbd></td>
-						<td>current filename</td>
+						<td>current file name</td>
 						<td>Serenity</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
@@ -729,6 +729,12 @@
 						<td>primary media file</td>
 						<td>&lt;file path&gt;</td>
 						<td><kbd class="type">File</kbd></td>
+					</tr>
+					<tr id="mediaFileName">
+						<td><kbd class="variable">mediaFileName</kbd></td>
+						<td>primary media file name</td>
+						<td>Serenity</td>
+						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr id="mediaTitle">
 						<td><kbd class="variable">mediaTitle</kbd></td>
