Added {dovi} binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -550,6 +550,12 @@
 						<td>HDR</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
+					<tr id="dovi">
+						<td><kbd class="variable">dovi</kbd></td>
+						<td>Dolby Vision</td>
+						<td>Dolby Vision</td>
+						<td><kbd class="type">String</kbd></td>
+					</tr>
 					<tr id="bitrate">
 						<td><kbd class="variable">bitrate</kbd></td>
 						<td>overall bitrate</td>
