Added -no-index option to manpage

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -365,9 +365,9 @@
 						<td><a href="forums/viewtopic.php?t=12133">reset history</a></td>
 						<td></td>
 					</tr>
-					<tr id="unixfs">
-						<td><kbd class="option">-unixfs</kbd></td>
-						<td><a href="forums/viewtopic.php?t=12627">disable file path validation</a></td>
+					<tr id="no-history">
+						<td><kbd class="option">-no-history</kbd></td>
+						<td><a href="forums/viewtopic.php?t=9787">disable history</a></td>
 						<td></td>
 					</tr>
 					<tr id="no-xattr">
@@ -380,9 +380,14 @@
 						<td><a href="forums/viewtopic.php?t=12022">disable media parser</a></td>
 						<td></td>
 					</tr>
-					<tr id="no-history">
-						<td><kbd class="option">-no-history</kbd></td>
-						<td><a href="forums/viewtopic.php?t=9787">disable history</a></td>
+					<tr id="no-index">
+						<td><kbd class="option">-no-index</kbd></td>
+						<td>disable media index</td>
+						<td></td>
+					</tr>
+					<tr id="unixfs">
+						<td><kbd class="option">-unixfs</kbd></td>
+						<td><a href="forums/viewtopic.php?t=12627">disable file path validation</a></td>
 						<td></td>
 					</tr>
 					<tr id="version">
