--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -15,6 +15,19 @@
 
 	<base href="@{link.site.index}" target="_blank">
 
+
+	<!-- Google Tag Code -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-655271139"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('set', 'allow_ad_personalization_signals', false);
+	gtag('js', new Date());
+	gtag('config', 'AW-655271139');
+	</script>
+	<!-- Google Tag Code -->
+
+
 	<!-- Meta Pixel Code -->
 	<script>
 		!function(f,b,e,v,n,t,s)
