Google Tag Code

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -24,6 +24,16 @@
 	<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
 	<script src="index.js"></script>
 
+	
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NFPQ568');</script>
+<!-- End Google Tag Manager -->
+
+
 	<meta name="description" content="@{package.description}" />
 	<meta name="keywords" content="@{package.tags}" />
 	<meta name="author" content="@{package.company}" />
@@ -38,6 +48,14 @@
 	<meta property="og:image" content="@{link.image.logo}" />
 </head>
 <body>
+
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NFPQ568"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+
 	<div class="page">
 		<div class="navigation">
 			<div>
