--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -16,16 +16,13 @@
 	<base href="@{link.site.index}" target="_blank">
 
 
-	<!-- Google Tag Code -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-655271139"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('set', 'allow_ad_personalization_signals', false);
-	gtag('js', new Date());
-	gtag('config', 'AW-655271139');
-	</script>
-	<!-- Google Tag Code -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NFPQ568');</script>
+<!-- End Google Tag Manager -->
 
 
 	<!-- Meta Pixel Code -->
@@ -44,6 +41,14 @@
 	<!-- End Meta Pixel Code -->
 </head>
 <body>
+
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NFPQ568"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+
 	<div class="page">
 		<div class="navigation">
 			<div>
