Add {decade} binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -406,6 +406,12 @@
 						<td>[1977, 2019]</td>
 						<td><kbd class="type">Integer*</kbd></td>
 					</tr>
+					<tr id="decade">
+						<td><kbd class="variable">decade</kbd></td>
+						<td>movie decade</td>
+						<td>1970</td>
+						<td><kbd class="type">Integer</kbd></td>
+					</tr>
 					<tr id="genre">
 						<td><kbd class="variable">genre</kbd></td>
 						<td>primary genre</td>
